so many commits to fix scrolling on mobile devices

--- a/Shop/wwwroot/css/jose.css
+++ b/Shop/wwwroot/css/jose.css
@@ -64,7 +64,8 @@ th {
 }
 
 div.mobile-device-scroll {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 footer {
